<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/filterRoom"
        android:title="@string/filter_by_room"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/mario"
                android:title="Mario" />
            <item
                android:id="@+id/peach"
                android:title="Peach" />
            <item
                android:id="@+id/yoshi"
                android:title="Yoshi" />
        </menu>

    </item>

    <item
        android:id="@+id/filterDate"
        android:title="@string/filter_by_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/cancel"
        android:title="@string/show_all_meetings"
        app:showAsAction="never" />

</menu>